Iniciando integração com RabbitMQ
